# esp32s3_mp3

./: CMakeLists.txt  README.md  a.sh  eez.eez-project-ui-state  fix.md  partitions_16MB.csv
main/: CMakeLists.txt  idf_component.yml  main.c  pin_cfg.h  wifi.html
main/bat/: bat.c  bat.h
main/bt/: bt.c  bt.h
main/i2c_sensor/: aht20.c  aht20.h  draw_cube.c  draw_cube.h  qmi.c  qmi.h
main/lcd/: lcd.c  lcd.h
main/mytimer/: mytimer.c  mytimer.h
main/ns4168/: audio.c  audio.h
main/record/: record.c  record.h
main/sd/: sd.c  sd.h
main/ui/: actions.c  actions.h  fonts.h  screens.c  screens.h  ui.c  ui.h  ui_font_cn_font.c  ui_font_cn_font_20.c  vars.c  vars.h
main/wifi_time/: wifi_time.c  wifi_time.h
